--- a/Bitcoin_WPF/Bitcoin_WPF.csproj
+++ b/Bitcoin_WPF/Bitcoin_WPF.csproj
@@ -39,8 +39,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\BitcoinLib\bin\Release\BlockchainAPI.dll</HintPath>
     </Reference>
+    <Reference Include="QRCoder">
+      <HintPath>.\QRCoder.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
